crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI025_PYI025_1.py.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI025 [*] Use `from collections.abc import Set as AbstractSet` to avoid confusion with the `set` builtin
  --> PYI025_1.py:10:33
   |
 9 | def f():
10 |     from collections.abc import Set  # PYI025
   |                                 ^^^
help: Alias `Set` to `AbstractSet`
   |
10 |     from collections.abc import Set as AbstractSet  # PYI025
   |                                     ++++++++++++++

PYI025 [*] Use `from collections.abc import Set as AbstractSet` to avoid confusion with the `set` builtin
  --> PYI025_1.py:14:51
   |
13 | def f():
14 |     from collections.abc import Container, Sized, Set, ValuesView  # PYI025
   |                                                   ^^^
15 |
16 |     GLOBAL: Set[int] = set()
   |
help: Alias `Set` to `AbstractSet`
   |
14 ~     from collections.abc import Container, Sized, Set as AbstractSet, ValuesView  # PYI025
15 |
16 ~     GLOBAL: AbstractSet[int] = set()
17 |
18 |     class Class:
19 ~         member: AbstractSet[int]
   |
