crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI025_PYI025_3.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI025 [*] Use `from collections.abc import Set as AbstractSet` to avoid confusion with the `set` builtin
 --> PYI025_3.pyi:6:36
  |
4 | """
5 |
6 | from collections.abc import Set as Set  # PYI025 triggered but fix is not marked as safe
  |                                    ^^^
help: Alias `Set` to `AbstractSet`
  |
6 | from collections.abc import Set as AbstractSet  # PYI025 triggered but fix is not marked as safe
  |                                    ++++++++
note: This is an unsafe fix and may change runtime behavior
