crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI032_PYI032.py.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI032 [*] Prefer `object` to `Any` for the second parameter to `__eq__`
 --> PYI032.py:6:29
  |
5 | class Bad:
6 |     def __eq__(self, other: Any) -> bool: ...  # PYI032
  |                             ^^^
7 |     def __ne__(self, other: typing.Any) -> typing.Any: ...  # PYI032
  |
help: Replace with `object`
  |
6 -     def __eq__(self, other: Any) -> bool: ...  # PYI032
6 +     def __eq__(self, other: object) -> bool: ...  # PYI032
  |

PYI032 [*] Prefer `object` to `Any` for the second parameter to `__ne__`
 --> PYI032.py:7:29
  |
5 | class Bad:
6 |     def __eq__(self, other: Any) -> bool: ...  # PYI032
7 |     def __ne__(self, other: typing.Any) -> typing.Any: ...  # PYI032
  |                             ^^^^^^^^^^
help: Replace with `object`
  |
7 -     def __ne__(self, other: typing.Any) -> typing.Any: ...  # PYI032
7 +     def __ne__(self, other: object) -> typing.Any: ...  # PYI032
  |

PYI032 [*] Prefer `object` to `Any` for the second parameter to `__eq__`
  --> PYI032.py:27:28
   |
26 | class BadStringized:
27 |    def __eq__(self, other: "Any") -> bool: ...  # PYI032
   |                            ^^^^^
28 |    def __ne__(self, other: "Any") -> bool: ...  # PYI032
   |
help: Replace with `object`
   |
27 -    def __eq__(self, other: "Any") -> bool: ...  # PYI032
27 +    def __eq__(self, other: object) -> bool: ...  # PYI032
   |

PYI032 [*] Prefer `object` to `Any` for the second parameter to `__ne__`
  --> PYI032.py:28:28
   |
26 | class BadStringized:
27 |    def __eq__(self, other: "Any") -> bool: ...  # PYI032
28 |    def __ne__(self, other: "Any") -> bool: ...  # PYI032
   |                            ^^^^^
help: Replace with `object`
   |
28 -    def __ne__(self, other: "Any") -> bool: ...  # PYI032
28 +    def __ne__(self, other: object) -> bool: ...  # PYI032
   |
